--- a/conda_yaml/rna_tools.yaml
+++ b/conda_yaml/rna_tools.yaml
@@ -8,6 +8,7 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - _r-mutex=1.0.1=anacondar_1
   - alsa-lib=1.2.8=h166bdaf_0
+  - bedtools=2.30.0=h468198e_3
   - binutils_impl_linux-64=2.39=h6ceecb4_0
   - bioconductor-biobase=2.58.0=r42hc0cfd56_0
   - bioconductor-biocgenerics=0.44.0=r42hdfd78af_0
@@ -18,9 +19,9 @@ dependencies:
   - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.9.24=ha878542_0
+  - ca-certificates=2023.01.10=h06a4308_0
   - cairo=1.16.0=ha61ee94_1014
-  - certifi=2022.9.24=pyhd8ed1ab_0
+  - certifi=2022.12.7=py310h06a4308_0
   - cffi=1.15.1=py310h255011f_2
   - contourpy=1.0.6=py310hbf28c38_0
   - curl=7.86.0=h7bff187_1
@@ -103,7 +104,7 @@ dependencies:
   - numpy=1.23.4=py310h53a5b5f_1
   - openjdk=17.0.3=hafdced1_4
   - openjpeg=2.5.0=h7d73246_1
-  - openssl=1.1.1s=h166bdaf_0
+  - openssl=1.1.1t=h7f8727e_0
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.5.1=py310h769672d_1
   - pango=1.50.11=h382ae3d_0
@@ -141,6 +142,7 @@ dependencies:
   - perl-text-abbrev=1.02=pl5321hd8ed1ab_0
   - perl-text-parsewords=3.31=pl5321hd8ed1ab_0
   - perl-version=0.9929=pl5321h166bdaf_0
+  - picard=3.0.0=hdfd78af_1
   - pigz=2.6=h27826a3_0
   - pillow=9.2.0=py310h454ad03_3
   - pip=22.3=pyhd8ed1ab_0
